simple-static-publish/webserver-pod-host.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: webserver
  name: webserver
  namespace: dev
spec:
  containers:
  - image: nginx
    name: webserver
    volumeMounts:
    - name: root-www
      mountPath: /root/html/
  volumes:
  - name: root-www
    hostPath:
      path: /var/k8s-mnt/local/
