simple-static-publish/webserver-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: webserver
  name: webserver
  namespace: dev
spec:
  containers:
  - image: nginx
    name: webserver
    volumeMounts:
    - name: root-www
      mountPath: /usr/share/nginx/html/
  volumes:
  - name: root-www
    persistentVolumeClaim:
      claimName: local-claim
